# codility

./: .editorconfig  .gitignore  amazon_1.py  amazon_2.py  amazon_3.py  distinct.py  frog_jump.py  frog_river_one.py  max_counters.py  max_product_of_three.py  missing_integer.py  mushroom_picker.py  package.json  passing_cars.py  perm_check.py  perm_missing_element.py  pyproject.toml  tape_equilibrium.py
src/01_iterations/: binary_gap.js  binary_gap.py
src/02_arrays/: odd_occurrences_in_array.py
src/03_time_complexity/: frog_jump.py  perm_missing_element.py  tape_equilibrium.py
src/05_prefix_sums/: genomic_range_query.py
src/07_stacks_and_queues/: brackets.js
